<resources>
    <string name="app_name">DebtApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_button_skip_login">skip_login</string>
    <string name="main_debt_amount_hint">click to type amount</string>
    <string name="main_debt_desc_hint">click to type description</string>
    <string name="main_arrow_arrow"><![CDATA[------------------->]]></string>
    <string name="activity_main_enter_new_person">enter new person</string>
    <string name="creditor">creditor</string>
    <string name="submit">submit</string>
    <string name="accept_debt">accept debt</string>

</resources>
